making nav bar work, fixing paragraphs, fixing fonts, fixing spacing, fixing size of stacked bar chart

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -93,7 +93,7 @@ label{
   display: inline-block;
   background-color: #ddd;
   padding: 4px 11px;
-  font-family: Arial;
+  font-family: "Muli";
   font-size: 16px;
   cursor: pointer;
 }
